# Erpnext-custom-app

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml
.github/workflows/: custom-app-ci.yml
speedaily_bos/: hooks.py  install.py  migration.py  modules.txt  sso.py
speedaily_bos/public/css/: speedaily.css
speedaily_bos/public/js/: speedaily.js
speedaily_bos/speedaily_bos/workspace/speedaily_bos/: speedaily_bos.json
tests/: test_package.py
